<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.createuser.CreateUserActivity">

    <data>

        <import type="com.w3engineers.unicef.telemesh.data.helper.constants.Constants.DefaultValue" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/chat_background">


        <ScrollView
            android:id="@+id/scrollview"
            style="@style/ScrollStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/image_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/margin_30"
                app:layout_constraintTop_toTopOf="parent">

                <View
                    android:id="@+id/top_gradient"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_150"
                    android:background="@color/background_color"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    android:weightSum="2"
                    app:layout_constraintBottom_toBottomOf="@id/divider"
                    app:layout_constraintLeft_toLeftOf="parent">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        android:background="@mipmap/shape"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitXY"
                        android:scaleX="-1" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        android:background="@mipmap/shape"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitXY" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/image_view_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_16"
                    android:contentDescription="@string/txt_description_back"
                    android:padding="@dimen/padding_5"
                    android:src="@mipmap/ic_back_white"
                    app:layout_constraintStart_toStartOf="@+id/top_gradient"
                    app:layout_constraintTop_toTopOf="@+id/top_gradient" />

                <TextView
                    android:id="@+id/text_view_create_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_20"
                    android:text="@string/create_profile"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_20"
                    app:layout_constraintBottom_toBottomOf="@+id/image_view_back"
                    app:layout_constraintStart_toEndOf="@+id/image_view_back"
                    app:layout_constraintTop_toTopOf="@+id/image_view_back" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:layout_constraintTop_toBottomOf="@+id/top_gradient" />

                <ImageView
                    android:id="@+id/image_profile_background"
                    android:layout_width="@dimen/width_120"
                    android:layout_height="@dimen/height_120"
                    android:background="@drawable/circular_white"
                    android:contentDescription="@string/logo_image"
                    android:padding="@dimen/margin_15"
                    app:layout_constraintBottom_toBottomOf="@+id/divider"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/divider" />

                <ImageView
                    android:id="@+id/image_profile"
                    android:layout_width="@dimen/width_120"
                    android:layout_height="@dimen/height_120"
                    android:contentDescription="@string/profile_selection_image"
                    android:padding="@dimen/margin_20"
                    android:src="@mipmap/ic_avatar_grey"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="@+id/divider"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/divider" />


                <TextView
                    android:id="@+id/text_view_image_name"
                    android:layout_width="@dimen/width_120"
                    android:layout_height="@dimen/height_120"
                    android:background="@drawable/circular_white"
                    android:gravity="center"
                    android:maxLength="2"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/divider"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/divider"
                    tools:text="RJ" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_layout"
                    style="@style/signup_editext_style"
                    android:textColorHint="@color/hint_text_color"
                    app:hintTextAppearance="@style/hint_style"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/image_view_pen"
                    app:layout_constraintTop_toBottomOf="@+id/image_profile_background">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_15"
                        android:backgroundTint="@color/new_user_button_color"
                        android:digits="@string/myDigits"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/enter_first_name"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLength="@{DefaultValue.MAXIMUM_TEXT_LIMIT}"
                        android:singleLine="true"
                        android:textSize="@dimen/text_body">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/image_view_pen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_15"
                    android:contentDescription="@string/name_field_icon"
                    android:src="@mipmap/ic_pen"
                    app:layout_constraintBottom_toBottomOf="@+id/name_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/name_layout" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/last_name_layout"
                    style="@style/signup_editext_style"
                    android:textColorHint="@color/hint_text_color"
                    app:hintTextAppearance="@style/hint_style"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/image_view_pen2"
                    app:layout_constraintTop_toBottomOf="@+id/name_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_15"
                        android:backgroundTint="@color/new_user_button_color"
                        android:digits="@string/myDigits"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/enter_last_name"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLength="@{DefaultValue.MAXIMUM_TEXT_LIMIT}"
                        android:singleLine="true"
                        android:textSize="@dimen/text_body">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/image_view_pen2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_15"
                    android:contentDescription="@string/name_field_icon"
                    android:src="@mipmap/ic_pen"
                    app:layout_constraintBottom_toBottomOf="@+id/last_name_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/last_name_layout" />


                <Button
                    android:id="@+id/button_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/height_40"
                    android:layout_marginTop="@dimen/margin_16"
                    android:layout_marginEnd="25dp"
                    android:background="@drawable/ractangular_white"
                    android:text="@string/signup"
                    android:textColor="@color/new_user_button_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/last_name_layout" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

