...
    <string name="app_name">Telemesh</string>
    <string name="activity_view_profile">My profile</string>
    <string name="enter_first_name">First name</string>
    <string name="enter_last_name">Last name</string>
    <string name="signup">Next</string>
    <!--    <string name="no_item_found">No item found</string>-->
    <string name="done">Done</string>
    <string name="myDigits"> abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ 1234567890 </string>
    <string name="create_user">Create User</string>
    <string name="select_avatar">Select an avatar</string>
    <string name="select_photo">Select Avatar</string>
    <string name="title_discoverd_fragment">Users</string>
    <string name="title_personal_fragment">Personal Contacts</string>
    <string name="title_message_feed_fragment">Broadcast</string>
    <string name="title_settings_fragment">My Telemesh</string>
    <string name="title_conversation_fragment">Conversation</string>

    <string name="logo_image">logo image</string>
    <string name="double_press_exit">Please click BACK again to exit.</string>
    <string name="chat_send_button_description" translatable="false">Send icon.</string>

    <string name="demo_language">English</string>
    <string name="activity_about_us">About Telemesh</string>
    <string name="app_version">Version:</string>
...
